--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,11 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      run: |
-        docker build -t my-node-app .
-        docker run -p 8080:8080 -d my-node-app
+    - name: Build Docker image
+      run: docker build -t my-node-app .
+
+    - name: Run Docker container
+      run: docker run -p 8080:8080 -d --name my-node-app-container my-node-app
+
+    - name: Print Docker container logs
+      run: docker logs my-node-app-container
