--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,12 @@ jobs:
     - name: Run Docker container
       run: docker run -p 8080:8080 -d --name my-node-app-container my-node-app
 
+    - name: Wait for container to start
+      run: sleep 10
+
+    - name: Check Docker container status
+      run: docker ps -a
+
     - name: List files in Docker container
       run: docker exec my-node-app-container ls -l /usr/src/app
 
